_cache/v0.18.1/libffi/specs.md
---
title: "libffi"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["3.4.2"], "compilers": ["gcc@=7.3.1", "gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-ahug", "aws-ahug-aarch64", "aws-isc", "aws-isc-aarch64", "build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 6, "num_specs_by_stack": {"root": 6, "e4s": 1, "data-vis-sdk": 1, "radiuss": 1, "build_systems": 1, "tutorial": 2, "aws-ahug": 2, "aws-isc": 2, "aws-isc-aarch64": 2, "aws-ahug-aarch64": 2}}
spec_details: [{"hash": "tkru6n3q7cytihfaayxe3r6zxjevfzvr", "compiler": "gcc@=7.5.0", "versions": ["3.4.2"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": [], "stacks": ["root", "e4s", "data-vis-sdk", "radiuss", "build_systems", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/libffi-3.4.2/linux-ubuntu18.04-x86_64-gcc-7.5.0-libffi-3.4.2-tkru6n3q7cytihfaayxe3r6zxjevfzvr.spack"}, {"hash": "d6d3lh3hgkjwbifbbjuvqs2a3w5xj7pd", "compiler": "gcc@=7.3.1", "versions": ["3.4.2"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": [], "stacks": ["root", "aws-ahug", "aws-isc"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/libffi-3.4.2/linux-amzn2-x86_64_v4-gcc-7.3.1-libffi-3.4.2-d6d3lh3hgkjwbifbbjuvqs2a3w5xj7pd.spack"}, {"hash": "hw3kooxxgcf56ngbv5yit2yfls2wi5wk", "compiler": "gcc@=7.3.1", "versions": ["3.4.2"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": [], "stacks": ["aws-isc-aarch64", "root", "aws-ahug-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/libffi-3.4.2/linux-amzn2-graviton2-gcc-7.3.1-libffi-3.4.2-hw3kooxxgcf56ngbv5yit2yfls2wi5wk.spack"}, {"hash": "ja6c3o4ary2sbhdg5brj22kywgwgqhgu", "compiler": "gcc@=7.3.1", "versions": ["3.4.2"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": [], "stacks": ["aws-isc-aarch64", "root", "aws-ahug-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/libffi-3.4.2/linux-amzn2-aarch64-gcc-7.3.1-libffi-3.4.2-ja6c3o4ary2sbhdg5brj22kywgwgqhgu.spack"}, {"hash": "4ouejdiixpsdu4ysvo2qnzhryndwemcu", "compiler": "gcc@=7.3.1", "versions": ["3.4.2"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": [], "stacks": ["root", "aws-ahug", "aws-isc"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/libffi-3.4.2/linux-amzn2-x86_64_v3-gcc-7.3.1-libffi-3.4.2-4ouejdiixpsdu4ysvo2qnzhryndwemcu.spack"}, {"hash": "qqvp57poxld2yeyn3v4mb5cal22aiswn", "compiler": "gcc@=8.4.0", "versions": ["3.4.2"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": [], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/libffi-3.4.2/linux-ubuntu18.04-x86_64-gcc-8.4.0-libffi-3.4.2-qqvp57poxld2yeyn3v4mb5cal22aiswn.spack"}]
---